@@ -52,7 +52,13 @@ use POSIX qw(tmpnam);
 
 $name = "display";
 $version = "___version___";
-@platforms = qw(redhat-6.2 redhat-7.0 redhat-7.1 turbolinux-7.0 debian-2.2 debian-woody mandrake-7.2 mandrake-8.0);
+@platforms = qw(redhat-6.2 redhat-7.0 redhat-7.1 redhat-7.2
+                
+                mandrake-7.2 mandrake-8.0
+                
+                debian-2.2 debian-woody
+                
+                turbolinux-7.0);
 
 $description =<<"end_of_description;";
        Configures XFree86 version 4.
@@ -76,6 +82,7 @@ $platmap =
   'redhat-6.2'     => $standard_locations,
   'redhat-7.0'     => $standard_locations,
   'redhat-7.1'     => $standard_locations,
+  'redhat-7.2'     => $standard_locations,
   'debian-2.2'     => $standard_locations,
   'debian-woody'   => $standard_locations,
   'mandrake-7.2'   => $standard_locations,
